# japp

./: .gitignore  Cargo.toml  README.md  test.japp
crates/japp_util/: Cargo.toml
crates/japp_util/src/: lib.rs  spanned.rs
crates/lexer/: Cargo.toml
crates/lexer/benches/: lex_valid.rs
crates/lexer/src/: interleave.rs  lib.rs  nfa.rs
crates/lexer/tests/: proptest.proptest-regressions  proptest.rs  test_lexer.rs
crates/macro_japp/: Cargo.toml
crates/macro_japp/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  expr_parser.rs  lexer.rs  lib.rs  parser.rs
crates/parser/src/ast/: decl.rs  expr.rs  lit.rs  mod.rs  temp.rs
crates/parser/tests/: corpus.rs  types.rs
crates/parser/tests/corpus/: const.in  fn.in
crates/spressions/: Cargo.toml
crates/spressions/src/: lib.rs  parser.rs
crates/spressions/tests/: ast.rs
crates/transpiler/: Cargo.toml
crates/transpiler/src/: lib.rs
crates/typecheck/: Cargo.toml
crates/typecheck/src/: lib.rs
crates/typecheck/src/ast/: decl.rs  expr.rs  fixity.rs  lit.rs  mod.rs
lexer/: Cargo.toml
lexer/src/: interleave.rs  lib.rs  nfa.rs  state.rs  token.rs
parser/: Cargo.toml
parser/src/: expr_parser.rs  lexer.rs  lib.rs  parser.rs
parser/src/ast/: decl.rs  expr.rs  lit.rs  mod.rs
src/: decl.rs  expr.rs  expr_parser.rs  lexer.rs  lib.rs  main.rs  parser.rs  program.rs
src/ast/: decl.rs  expr.rs  fixity.rs  lit.rs  mod.rs  spanned.rs
