[package]
name = "japp"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
lexer = { path = "./crates/lexer/" }
parser = { path = "./crates/parser/" }
japp_util = { path = "./crates/japp_util//" }
nom = "7.1.3"
nom-span = "0.1.2"

# Dev
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["html_reports"] }
proptest = { version = "1.6.0", features = ["timeout"] }


[dependencies]
ariadne = "0.5.0"
parser = { path = "./crates/parser/" }
