[package]
name = "japp"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
lexer = { path = "./crates/lexer/" }
parser = { path = "./crates/parser/" }
japp_util = { path = "./crates/japp_util//" }
transpiler = { path = "./crates/transpiler/" }
nom = "7.1.3"
nom-span = "0.1.2"
ariadne = "0.5.0"
petgraph = "0.7.1"

# Dev
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["html_reports"] }
proptest = { version = "1.6.0", features = ["timeout"] }


[dependencies]
ariadne.workspace = true
clap = { version = "4.5.35", features = ["derive"] }
parser.workspace = true
transpiler.workspace = true
