[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = { workspace = true }
nom-span = { workspace = true }
lexer = { workspace = true }
japp_util = { workspace = true }
ariadne = { workspace = true }
petgraph = { workspace = true }
regex = "1.11.1"

[dev-dependencies]
rand = "0.8.5"
